test/error/if_cond.ss
if "hello" 3 4
# -> type error
